add update post route
